# docscan

./: Cargo.toml  LICENSE  README.md  README_zh.md
src/: app.rs  command.rs  main.rs  scan.rs  ui.rs  utils.rs
src/app/: browse.rs  cmd.rs  config.rs  input.rs  mod.rs  mouse.rs  results.rs  state.rs  types.rs
src/scan/: doc.rs  docx.rs  excel.rs  mod.rs  pdf.rs  text.rs
