[package]
name = "docscan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
calamine = "0.34.0"
cfb = "0.14.0"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
indicatif = "0.18.4"
lopdf = "0.40.0"
memchr = "2.8.0"
num_cpus = "1.17.0"
rayon = "1.11.0"
walkdir = "2.5.0"
zip = "8.5.1"
