[package]
name = "docscan"
version = "0.1.0"
edition = "2024"
description = "A TUI document search tool for Word, Excel, PDF, and plain text files"
license = "MIT"
repository = "https://github.com/sprchu/docscan"
keywords = ["search", "documents", "tui", "cli", "office"]
categories = ["command-line-utilities", "text-processing"]
authors = ["sprchu"]

[dependencies]
anyhow = "1.0.102"
calamine = "0.34.0"
cfb = "0.14.0"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29.0"
indicatif = "0.18.4"
lopdf = "0.40.0"
memchr = "2.8.0"
num_cpus = "1.17.0"
ratatui = "0.30.0"
rayon = "1.11.0"
unicode-width = "0.2.2"
walkdir = "2.5.0"
zip = "8.5.1"
